# llm-security-lab

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  codeql.yml
app/: api.py  auth.py  llm_backend.py  llm_engine.py  persistence.py
app/secure/: filters.py  rag_system.py  tools.py
app/vulnerable/: rag_system.py  tools.py
data/: generated-note.txt  test.txt
docs/: OWASP_LLMSecurity.md
tests/: test_attacks.py  test_fuzzing.py  test_load.py  test_security_hardening.py  test_vulnerable_demo.py
