[project]
name = "llm-security-lab"
version = "2.0.0"
description = "Security lab for LLM applications — OWASP Top 10 attack & defense demonstrations"
requires-python = ">=3.12"
license = {text = "MIT"}

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B", "UP"]
ignore = ["S101", "S603", "S607", "S108", "B008", "S104", "UP042"]  # assert, subprocess, paths, Depends(), bind 0.0.0.0, StrEnum

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "S105", "S311", "S106"]  # sys.path before imports, hardcoded test data, random in fuzzing
"app/vulnerable/*" = ["S"]  # intentionally insecure code

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.bandit]
exclude_dirs = ["tests", "app/vulnerable"]
skips = ["B101"]
